--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -3,7 +3,7 @@
       <div class="topControls">
         <app-single-project-controls [projectForm]="singleProjectService.projectForm" [projectId]="singleProjectService.projectId" class="left controls" *ngIf="!singleProjectService.archiveActive"></app-single-project-controls>
         <div class="right">
-          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" firstValue="Selecteer bedrijf" [dataSource]="companyService.getCompanies() | async" valueKey="_id" [readOnly]="!auth.isAdmin()">
+          <app-single-project-row label="Contactpersoon binnen" field="company" type="select" firstValue="Selecteer bedrijf" [dataSource]="companyService.companies$ | async" valueKey="_id" [readOnly]="!auth.isAdmin()">
           </app-single-project-row>
 
           <app-single-project-row label=":" field="EpbReporter" type="select" firstValue="Selecteer EPB verslaggever" [dataSource]="userService.getUsers() | async | filterUsers:singleProjectService.projectForm.value.company" valueKey="_id" [showAsterisk]="false">
@@ -58,7 +58,7 @@
     <div class="projectRow">
       <h2>Contactgegevens</h2>
     </div>
-  
+
     <app-single-project-row label="Naam" field="name" type="input">
     </app-single-project-row>
 
@@ -107,7 +107,7 @@
     <app-single-project-row label="Status" field="status" type="select" firstValue="Selecteer status" [dataSource]="projectService.statuses" valueKey="type">
     </app-single-project-row>
   </div>
-  
+
 
   <div class="projectSection" *ngIf="!singleProjectService.archiveActive">
     <div class="projectRow">
