Dared to enable strict mode and ended up cleaning A LOT

--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -12,5 +12,5 @@
     </ng-template>
   </div>
 
-  <app-comments [comments]="singleProjectCommentsService.comments" [readOnly]="singleProjectService.archiveActive"></app-comments>
+  <app-comments [comments]="singleProjectCommentsService.comments$ | async" [readOnly]="singleProjectService.archiveActive"></app-comments>
 </form>
