--- a/src/app/components/mail-project/mail-project.component.html
+++ b/src/app/components/mail-project/mail-project.component.html
@@ -45,20 +45,20 @@
     <div class="mail">
       <div class="header">
         <div class="sender"><strong>Van:</strong> {{ auth.getUserDetails().id | user | async }}</div>
-        <div class="receiver"><strong>Aan:</strong> {{mailForm.get('receiver').value}}</div>
-        <div class="cc" *ngIf="mailForm.get('cc').value"><strong>Cc:</strong> {{mailForm.get('cc').value}}</div>
-        <div class="subject" *ngIf="mailForm.get('subject').value"><strong>Onderwerp:</strong> <span
-            [innerHTML]="mailForm.get('subject').value | mailTemplate | async | safeHtml"></span></div>
+        <div class="receiver"><strong>Aan:</strong> {{mailForm.get('receiver')?.value}}</div>
+        <div class="cc" *ngIf="mailForm.get('cc')?.value"><strong>Cc:</strong> {{mailForm.get('cc')?.value}}</div>
+        <div class="subject" *ngIf="mailForm.get('subject')?.value"><strong>Onderwerp:</strong> <span
+            [innerHTML]="mailForm.get('subject')?.value | mailTemplate | async | safeHtml"></span></div>
       </div>
-      <div class="body" [innerHTML]="mailForm.get('body').value | newlineToBr | mailTemplate | async | safeHtml"></div>
+      <div class="body" [innerHTML]="mailForm.get('body')?.value | newlineToBr | mailTemplate | async | safeHtml"></div>
     </div>
 </div>
 
 <hr>
 
-<div class="wrapper mailList noBorder" *ngIf="singleProjectService.projectData">
+<div class="wrapper mailList noBorder" *ngIf="singleProjectService.projectData$ | async">
   <h2>Verzonden mails</h2>
-  <div class="mail" *ngFor="let mail of singleProjectService.projectData.mails | reverse">
+  <div class="mail" *ngFor="let mail of (singleProjectService.projectData$ | async)?.mails | reverse">
     <div class="header">
       <div class="sender"><strong>Van:</strong> {{ mail.sender | user | async }}</div>
       <div class="receiver"><strong>Aan:</strong> {{mail.receiver}}</div>
