--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,17 +1,17 @@
-<div class="controls">
+<div class="controls" *ngIf="projectService.activeFilter$ | async as activeFilter">
     <a [routerLink]="[ '/project/toevoegen' ]" class="btn red"><img src="/assets/images/icon-new.svg" alt=""> New project</a>
     <div class="btn filter status">
-        <span class="title">Toon ook <span class="error" *ngIf="projectService.activeFilter.status.length == 0"><span>!</span></span></span>
+        <span class="title">Toon ook <span class="error" *ngIf="activeFilter.status.length == 0"><span>!</span></span></span>
         <div class="dropdown">
             <div class="select-options">
                 <div>Selecteer</div>
-                <div class="btn" (click)="projectService.selectAllFilter('status', true, 'statuses')">Alles</div>
+                <div class="btn" (click)="projectService.selectAllFilter('status', true)">Alles</div>
                 <div class="btn" (click)="projectService.selectAllFilter('status', false)">Niets</div>
             </div>
-            <div class="item" *ngFor="let status of projectService.statuses" (click)="projectService.changeFilter('status', status.type)">
+            <div class="item" *ngFor="let status of projectEnumsService.statuses" (click)="projectService.changeFilter('status', status.type)">
                 <ng-container *ngIf="!status.onlyAdmin || (status.onlyAdmin && auth.isAdmin() )">
-                    <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="!projectService.activeFilter.status.includes(status.type)">
-                    <img src="/assets/images/icon-checked.svg" alt="" *ngIf="projectService.activeFilter.status.includes(status.type)">
+                    <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="!activeFilter.status.includes(status.type)">
+                    <img src="/assets/images/icon-checked.svg" alt="" *ngIf="activeFilter.status.includes(status.type)">
                     <span>{{status.name}}</span>
                 </ng-container>
             </div>
@@ -19,53 +19,53 @@
     </div>
 
     <div class="btn filter executor" *ngIf="auth.isAdmin()">
-        <span class="title">Uitvoerder <span class="error" *ngIf="projectService.activeFilter.executor.length == 0"><span>!</span></span></span>
+        <span class="title">Uitvoerder <span class="error" *ngIf="activeFilter.executor.length == 0"><span>!</span></span></span>
         <div class="dropdown">
             <div class="select-options">
                 <div>Selecteer</div>
-                <div class="btn" (click)="projectService.selectAllFilter('executor', true, 'executors')">Alles</div>
+                <div class="btn" (click)="projectService.selectAllFilter('executor', true)">Alles</div>
                 <div class="btn" (click)="projectService.selectAllFilter('executor', false)">Niets</div>
             </div>
-            <div class="item" *ngFor="let executor of projectService.executors"
+            <div class="item" *ngFor="let executor of projectEnumsService.executors"
                 (click)="projectService.changeFilter('executor', executor.type)">
                 <img src="/assets/images/icon-unchecked.svg" alt=""
-                    *ngIf="!projectService.activeFilter.executor.includes(executor.type)">
+                    *ngIf="!activeFilter.executor.includes(executor.type)">
                 <img src="/assets/images/icon-checked.svg" alt=""
-                    *ngIf="projectService.activeFilter.executor.includes(executor.type)">
+                    *ngIf="activeFilter.executor.includes(executor.type)">
                 <span>{{executor.name}}</span>
             </div>
         </div>
     </div>
 
     <div class="btn filter company" *ngIf="auth.isAdmin()">
-        <span class="title">Bedrijf <span class="error" *ngIf="projectService.activeFilter.company.length == 0"><span>!</span></span></span>
+        <span class="title">Bedrijf <span class="error" *ngIf="activeFilter.company.length == 0"><span>!</span></span></span>
         <div class="dropdown">
             <div class="select-options">
                 <div>Selecteer</div>
-                <div class="btn" (click)="projectService.selectAllFilter('company', true, 'companies')">Alles</div>
+                <div class="btn" (click)="projectService.selectAllFilter('company', true)">Alles</div>
                 <div class="btn" (click)="projectService.selectAllFilter('company', false)">Niets</div>
             </div>
             <div class="item" *ngFor="let company of companyService.companies$ | async"
                 (click)="projectService.changeFilter('company', company._id)">
                 <img src="/assets/images/icon-unchecked.svg" alt=""
-                    *ngIf="!projectService.activeFilter.company.includes(company._id)">
+                    *ngIf="!activeFilter.company.includes(company._id)">
                 <img src="/assets/images/icon-checked.svg" alt=""
-                    *ngIf="projectService.activeFilter.company.includes(company._id)">
+                    *ngIf="activeFilter.company.includes(company._id)">
                 <span>{{company.name}}</span>
             </div>
         </div>
     </div>
 
-    <div class="btn filter sort" [ngClass]="projectService.sortOptions.order">
+    <div class="btn filter sort" *ngIf="projectService.sortOptions$ | async as sortOptions" [ngClass]="sortOptions.order">
         <span class="title">Sorteer</span>
         <div class="dropdown">
-            <div class="item" *ngFor="let sortable of projectService.sortables" (click)="projectService.setSortable(sortable.type)">
+            <div class="item" *ngFor="let sortable of projectEnumsService.sortables" (click)="projectService.setSortable(sortable.type)">
                 <ng-container *ngIf="sortable.sort">
-                    <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="projectService.sortOptions.field !== sortable.type">
-                    <img src="/assets/images/icon-checked.svg" alt="" *ngIf="projectService.sortOptions.field === sortable.type">
+                    <img src="/assets/images/icon-unchecked.svg" alt="" *ngIf="sortOptions.field !== sortable.type">
+                    <img src="/assets/images/icon-checked.svg" alt="" *ngIf="sortOptions.field === sortable.type">
                     <span>{{sortable.name}}</span>
-                    <span class="arrow desc" *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'desc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
-                    <span class="arrow asc" *ngIf="projectService.sortOptions.field === sortable.type && projectService.sortOptions.order == 'asc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
+                    <span class="arrow desc" *ngIf="sortOptions.field === sortable.type && sortOptions.order == 'desc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
+                    <span class="arrow asc" *ngIf="sortOptions.field === sortable.type && sortOptions.order == 'asc'"><img src="/assets/images/icon-arrow.svg" alt=""></span>
                 </ng-container>
             </div>
         </div>
@@ -76,32 +76,32 @@
             <span *ngIf="batchMode && selectedProjects.length > 0" class="title">Pas projecten aan</span>
     </div>
     <div class="search">
-        <input type="text" name="search" [value]="projectService.searchTerm" (input)="projectService.setSearchTerm($event.target.value)" placeholder="Zoeken">
+        <input type="text" name="search" [value]="projectService.searchTerm$ | async" (input)="projectService.setSearchTerm($event)" placeholder="Zoeken">
     </div>
 </div>
 
 <div class="projectList" [ngClass]="{'batchMode': batchMode}">
     <div class="projects">
         <div class="project"
-        *ngFor="let project of (projectService.projects | sortProjects: projectService.sortOptions | filterProjects: projectService.activeFilter : projectService.searchTerm | async); trackBy: trackByFn"
+        *ngFor="let project of projectService.projects$ | async; trackBy: trackByFn"
         [ngClass]="[project.status]"
         [class.isFuturePlanned]="isFuturePlanned(project)"
         [class.selected]="isSelected(project) && batchMode"
         (click)="selectProject(project)">
-            <div class="company" [innerHTML]="project.company | company | async | highlightText: projectService.searchTerm | safeHtml"></div>
+            <div class="company" [innerHTML]="project.company | company | async | highlightText: projectService.searchTerm$.value | safeHtml"></div>
             <ng-container *ngIf="!batchMode; else noBatchMode">
                 <div class="title" [routerLink]="[ '/project', project._id ]">
-                    <span *ngIf="[project.dateActive, project.status] | isDateActiveTooOld" class="error">!</span>
-                    <span [innerHTML]="project.projectName | highlightText: projectService.searchTerm | safeHtml"></span> /
-                    <span [innerHTML]="project.projectType | projectType | highlightText: projectService.searchTerm | safeHtml"></span> /
+                    <span *ngIf="project.dateActive | isDateActiveTooOld: project.status" class="error">!</span>
+                    <span [innerHTML]="project.projectName | highlightText: projectService.searchTerm$.value | safeHtml"></span> /
+                    <span [innerHTML]="project.projectType | projectType | highlightText: projectService.searchTerm$.value | safeHtml"></span> /
                     {{project.houseAmount}}
                 </div>
             </ng-container>
             <ng-template #noBatchMode>
                 <div class="title">
-                    <span *ngIf="[project.dateActive, project.status] | isDateActiveTooOld" class="error">!</span>
-                    <span [innerHTML]="project.projectName | highlightText: projectService.searchTerm | safeHtml"></span> /
-                    <span [innerHTML]="project.projectType | projectType | highlightText: projectService.searchTerm | safeHtml"></span> /
+                    <span *ngIf="project.dateActive | isDateActiveTooOld: project.status" class="error">!</span>
+                    <span [innerHTML]="project.projectName | highlightText: projectService.searchTerm$.value | safeHtml"></span> /
+                    <span [innerHTML]="project.projectType | projectType | highlightText: projectService.searchTerm$.value | safeHtml"></span> /
                     {{project.houseAmount}}
                 </div>
             </ng-template>
@@ -112,32 +112,32 @@
                 (window:keydown)="registerCtrlKey($event)"
                 (window:keyup)="registerCtrlKey($event)"
                     *ngIf="!isSelected(project) || batchMode || !auth.isAdmin()">
-                    <span [innerHTML]="project.status | status | highlightText: projectService.searchTerm | safeHtml"></span>
+                    <span [innerHTML]="project.status | status | highlightText: projectService.searchTerm$.value | safeHtml"></span>
                 </div>
                 <div class="write" *ngIf="isSelected(project) && auth.isAdmin() && !batchMode">
                     <select name="status" id="status" (change)="changeStatus($event)">
                         <option value="">Selecteer status</option>
-                        <option *ngFor="let status of projectService.statuses" [value]="status.type" [selected]="status.type === project.status">{{status.name}}</option>
+                        <option *ngFor="let status of projectEnumsService.statuses" [value]="status.type" [selected]="status.type === project.status">{{status.name}}</option>
                     </select>
                 </div>
             </div>
             <div class="address">
-                <span [innerHTML]="project.street | highlightText: projectService.searchTerm | safeHtml"></span>,
-                <span [innerHTML]="project.postalCode | highlightText: projectService.searchTerm | safeHtml"></span>&nbsp;
-                <span [innerHTML]="project.city | highlightText: projectService.searchTerm | safeHtml"></span>
+                <span [innerHTML]="project.street | highlightText: projectService.searchTerm$.value | safeHtml"></span>,
+                <span [innerHTML]="project.postalCode | highlightText: projectService.searchTerm$.value | safeHtml"></span>&nbsp;
+                <span [innerHTML]="project.city | highlightText: projectService.searchTerm$.value | safeHtml"></span>
                 <ng-container *ngIf="project.extraInfoAddress">, </ng-container>
-                <span *ngIf="project.extraInfoAddress" class="extraInfoAddress" [innerHTML]="project.extraInfoAddress | highlightText: projectService.searchTerm | safeHtml"></span>
+                <span *ngIf="project.extraInfoAddress" class="extraInfoAddress" [innerHTML]="project.extraInfoAddress | highlightText: projectService.searchTerm$.value | safeHtml"></span>
             </div>
             <div class="dateHourCreated" title="Laatst aangepast: {{ project.dateEdited | formatDate:'time' }}">
-                <span [innerHTML]="project.dateActive | formatDate:'empty' | highlightText: projectService.searchTerm | safeHtml"></span>
+                <span [innerHTML]="project.dateActive | formatDate:'empty' | highlightText: projectService.searchTerm$.value | safeHtml"></span>
             </div>
             <div class="dateHourPlanned">
                 <b>
-                    <span [innerHTML]="project.executor | executor | highlightText: projectService.searchTerm | safeHtml"></span>
+                    <span [innerHTML]="project.executor | executor | highlightText: projectService.searchTerm$.value | safeHtml"></span>
                 </b>
                 <br>
-                <span [innerHTML]="project.datePlanned | formatDate | highlightText: projectService.searchTerm | safeHtml"></span>
-                <ng-container *ngIf="project.hourPlanned"> om <span [innerHTML]="project.hourPlanned | highlightText: projectService.searchTerm | safeHtml"></span></ng-container>
+                <span [innerHTML]="project.datePlanned | formatDate | highlightText: projectService.searchTerm$.value | safeHtml"></span>
+                <ng-container *ngIf="project.hourPlanned"> om <span [innerHTML]="project.hourPlanned | highlightText: projectService.searchTerm$.value | safeHtml"></span></ng-container>
             </div>
             <div class="technicalDataFilledIn">
                 <ng-container *ngIf="projectService.isTechnicalDataFilledIn(project); else technicalDataNotFilledIn">
@@ -185,7 +185,7 @@
             <div class="projectRow">
                 <select name="status" id="status" formControlName="status">
                     <option value="">Selecteer status</option>
-                    <option *ngFor="let status of projectService.statuses" [value]="status.type">{{status.name}}</option>
+                    <option *ngFor="let status of projectEnumsService.statuses" [value]="status.type">{{status.name}}</option>
                 </select>
                 <p *ngIf="formService.checkInputField(batchForm, 'status', submitted)" class="error">!</p>
             </div>
