--- a/src/app/components/comments/comments.component.html
+++ b/src/app/components/comments/comments.component.html
@@ -5,12 +5,12 @@
         <div class="content" [innerHTML]="comment.content | newlineToBr | safeHtml"></div>
         <ng-container *ngIf="!readOnly">
             <div class="icon edit"
-                *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin())"
+                *ngIf="auth.getUserDetails().id === comment.user || auth.isAdmin()"
                 (click)="singleProjectCommentsService.editComment(comment)">
                 <img src="assets/images/icon-edit.svg" alt="">
             </div>
             <div class="icon delete"
-                *ngIf="(auth.getUserDetails().id == comment.user || auth.isAdmin())"
+                *ngIf="auth.getUserDetails().id === comment.user || auth.isAdmin()"
                 (click)="singleProjectCommentsService.removeComment(comment)">
                 <img src="assets/images/icon-delete.svg" alt="">
             </div>
