Finally finish client code (client of client)

--- a/packages/frontend/src/assets/sass/_admin.scss
+++ b/packages/frontend/src/assets/sass/_admin.scss
@@ -30,6 +30,10 @@
         .span2 {
             grid-column: span 2;
         }
+
+        &.heading {
+            font-weight: 600;
+        }
     }
 }
 
